# wordnet_stemmer

./: Cargo.toml  README.md
src/: lib.rs
