[package]
name = "wordnet_stemmer"
version = "0.1.1"
authors = ["Maciej Dziardziel <fiedzia@gmail.com>"]
description = "Wordnet stemmer"
keywords = ["wordnet", "stemmer", "stemming", "nltk", "nlp"]
license = "Apache-2.0"
repository = "https://github.com/Fiedzia/wordnet_stemmer"
homepage = "https://github.com/Fiedzia/wordnet_stemmer"

[dependencies]
farmhash = "1.1.4"
